{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 18,
  "lineage": "2680cdce-8739-f82c-e96a-828f9d432357",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "udacity_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/6e375b9d-ad4b-4945-b141-04c0f4b89b97/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/lb-test/frontendIPConfigurations/lb-frontend",
                "name": "lb-frontend",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/6e375b9d-ad4b-4945-b141-04c0f4b89b97/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/public-ip-test"
              }
            ],
            "id": "/subscriptions/6e375b9d-ad4b-4945-b141-04c0f4b89b97/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/lb-test",
            "location": "westus",
            "name": "lb-test",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "tagname": "udacity"
            }
          },
          "dependencies": [
            "azurerm_public_ip.udacity_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "udacity_backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6e375b9d-ad4b-4945-b141-04c0f4b89b97/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/lb-test/backendAddressPools/backend-pool",
            "loadbalancer_id": "/subscriptions/6e375b9d-ad4b-4945-b141-04c0f4b89b97/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/lb-test",
            "name": "backend-pool"
          },
          "dependencies": [
            "azurerm_lb.udacity_lb",
            "azurerm_public_ip.udacity_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "udacity_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6e375b9d-ad4b-4945-b141-04c0f4b89b97/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/nic-0",
            "internal_domain_name_suffix": "uaoxqnhje3telifel2wbknycgd.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/6e375b9d-ad4b-4945-b141-04c0f4b89b97/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/udacity_vnet_test/subnets/udacity_subnet_test"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "name": "nic-0",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "tagname": "udacity"
            }
          },
          "dependencies": [
            "azurerm_subnet.udacity_subnet_test",
            "azurerm_virtual_network.udacity_vnet_test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6e375b9d-ad4b-4945-b141-04c0f4b89b97/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/nic-1",
            "internal_domain_name_suffix": "uaoxqnhje3telifel2wbknycgd.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic-ipconfig",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/6e375b9d-ad4b-4945-b141-04c0f4b89b97/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/udacity_vnet_test/subnets/udacity_subnet_test"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westus",
            "name": "nic-1",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "tagname": "udacity"
            }
          },
          "dependencies": [
            "azurerm_subnet.udacity_subnet_test",
            "azurerm_virtual_network.udacity_vnet_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "udacity_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6e375b9d-ad4b-4945-b141-04c0f4b89b97/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/nsg-test",
            "location": "westus",
            "name": "nsg-test",
            "resource_group_name": "Azuredevops",
            "security_rule": [],
            "tags": {
              "tagname": "udacity"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "deny_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6e375b9d-ad4b-4945-b141-04c0f4b89b97/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/nsg-test/securityRules/internet-deny-rule",
            "name": "internet-deny-rule",
            "network_security_group_name": "nsg-test",
            "priority": 400,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "Internet",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.udacity_nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "udacity_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/6e375b9d-ad4b-4945-b141-04c0f4b89b97/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/public-ip-test",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westus",
            "name": "public-ip-test",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "tagname": "udacity"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "udacity_subnet_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6e375b9d-ad4b-4945-b141-04c0f4b89b97/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/udacity_vnet_test/subnets/udacity_subnet_test",
            "name": "udacity_subnet_test",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Azuredevops",
            "virtual_network_name": "udacity_vnet_test"
          },
          "dependencies": [
            "azurerm_virtual_network.udacity_vnet_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "udacity_vnet_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "34781da0-27e9-4566-a0a4-5f2c15370233",
            "id": "/subscriptions/6e375b9d-ad4b-4945-b141-04c0f4b89b97/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/udacity_vnet_test",
            "location": "westus",
            "name": "udacity_vnet_test",
            "resource_group_name": "Azuredevops",
            "tags": {
              "tagname": "udacity"
            }
          }
        }
      ]
    }
  ]
}